syntax = "proto3";
package types;

import "v1beta1/coin.proto";
import "gogoproto/gogo.proto";

service Msg {
  rpc SetExchangeRate(MsgSetExchangeRate) returns (MsgSetExchangeRateResponse);
}

message MsgSetExchangeRate {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  cosmos.base.v1beta1.Coin exchange_rate = 1;
  string setter = 2;
}

message MsgSetExchangeRateResponse {}
