syntax = "proto3";
package konstellation.oracle;

option go_package = "x/oracle/types";

import "google/api/annotations.proto";
import "tx.proto";

service Query {
  rpc ExchangeRate(QueryExchangeRateRequest) returns (QueryExchangeRateResponse) {
  	option (google.api.http).get = "/konstellation/oracle/exchange_rate";
  }
}

message QueryExchangeRateRequest {}

message QueryExchangeRateResponse {
  ExchangeRate exchange_rate = 1;
}

